export interface WordSet {
	id: string;
	language: string;
	name: string;
	words: string[];
}
